tests/ui/consts/match_ice.stderr
error: to use a constant of type `S` in a pattern, `S` must be annotated with `#[derive(PartialEq, Eq)]`
  --> $DIR/match_ice.rs:11:9
   |
LL |         C => {}
   |         ^
   |
   = note: the traits must be derived, manual `impl`s are not sufficient
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralEq.html for details

error: aborting due to previous error

